# pyside6_app

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
src/video_analyzer/: __init__.py  __main__.py  app.py
