[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-analyzer"
version = "0.1.0"
description = "PySide6 video analysis desktop app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.7,<7",
    "opencv-python>=4.9,<5",
    "numpy>=1.26,<3",
]

[project.scripts]
video-analyzer = "video_analyzer.app:main"

[tool.setuptools.packages.find]
where = ["src"]
